@@ -8,6 +8,7 @@ import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Retrieve id, title, and a 150x200 box art url for every video
@@ -18,6 +19,9 @@ public class Kata4 {
     public static List<Map> execute() {
         List<MovieList> movieLists = DataUtil.getMovieLists();
 
-        return ImmutableList.of(ImmutableMap.of("id", 5, "title", "Bad Boys", "boxart", new BoxArt(150, 200, "url")));
+        return movieLists.stream().flatMap( ml -> ml.getVideos().stream()
+                    .map(m -> Map.of("id", m.getId(), "title", m.getTitle(), "url", m.getBoxarts().stream().map( b -> b.getWidth()==150? b.getUrl() : "").collect(Collectors.joining()))))
+                .collect(Collectors.toList()
+        );
     }
 }
