@@ -9,6 +9,7 @@ import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Retrieve the id, title, and smallest box art url for every video
@@ -19,6 +20,8 @@ public class Kata7 {
     public static List<Map> execute() {
         List<MovieList> movieLists = DataUtil.getMovieLists();
 
-        return ImmutableList.of(ImmutableMap.of("id", 5, "title", "Bad Boys", "boxart", "url"));
+        return movieLists.stream().flatMap( ml -> ml.getVideos().stream()
+                        .map(m -> Map.of("id", m.getId(), "title", m.getTitle(), "url", m.getBoxarts().stream().reduce( (b1 , b2) -> b1.getWidth()*b1.getHeight() < b2.getWidth() * b2.getHeight() ? b1 : b2).get().getUrl())))
+                .collect(Collectors.toList());
     }
 }
